k8s/envoy-gateway/sec-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: gateway-wide-auth-policy
  # namespace: gateway
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway # Apply to entire gateway
  extAuth:
    headersToExtAuth:
      - "Cookie"
      - "Authorization"
    http:
      backendRef:
        name: inbound-filter-svc  # Tên service ở trên
        namespace: default
        port: 8080
      # Headers to forward to auth service
      headersToBackend: ["X-User-Id"]
  cors:
    allowOrigins:
      - "http://localhost:3000"
      - "http://localhost:3001"
      - "http://localhost:3002"
      - "http://localhost:5173"
      - "https://seller.shopiew.me"
      - "https://shopiew.me"
      - "https://www.shopiew.me"
      - "https://admin.shopiew.com"
    allowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
      - PATCH
    allowHeaders:
      - "Accept"
      - "Accept-Version"
      - "Content-Type"
      - "Content-Length"
      - "Authorization"
      - "Cookie"
    allowCredentials: true
